Fix search button on mobile resolution

--- a/public/css/layout-basic.css
+++ b/public/css/layout-basic.css
@@ -14,12 +14,6 @@
     .nav-item {
         margin: auto;
     }
-    /*.navbar {
-        flex-wrap: nowrap;
-    }*/
-    /*.navbar-toggler {
-        flex-shrink: 1;
-    }*/
 }
 
 .custom-info {
